--- a/frontend/src/styles/MainPage.css
+++ b/frontend/src/styles/MainPage.css
@@ -52,8 +52,10 @@ body, html {
     max-width: 70%;
     align-self: flex-start;
     position: relative;
-    animation: floating 4s infinite ease-in-out;
+    animation: fadeIn 0.8s forwards, floating 4s infinite ease-in-out;
+    opacity: 0; /* Initial state hidden */
   }
+  
   .bubble2 {
     background-color: #66bb6a; /* Green background for bubbles */
     color: #fff;
@@ -66,21 +68,26 @@ body, html {
     max-width: 70%;
     align-self: flex-start;
     position: relative;
-    animation: floating2 4s infinite ease-in-out;
+    animation: fadeIn 0.8s forwards, floating2 4s infinite ease-in-out;
+    opacity: 0; /* Initial state hidden */
   }
   
-  .bubble:nth-child(even),  .bubble2:nth-child(even) {
+  .bubble:nth-child(even),
+  .bubble2:nth-child(even) {
     align-self: flex-end;
   }
   
-  .bubble:nth-child(odd), .bubble2:nth-child(odd) {
-    animation-delay: 0.2s;
+  .bubble:nth-child(odd),
+  .bubble2:nth-child(odd) {
+    animation-delay: 0.2s, 0.2s;
   }
   
-  .bubble:nth-child(even) , .bubble2:nth-child(even){
-    animation-delay: 0.4s;
+  .bubble:nth-child(even),
+  .bubble2:nth-child(even) {
+    animation-delay: 0.4s, 0.4s;
   }
   
+  /* Floating animation for bubbles */
   @keyframes floating {
     0% {
       transform: translateY(0);
@@ -92,6 +99,7 @@ body, html {
       transform: translateY(0);
     }
   }
+  
   @keyframes floating2 {
     0% {
       transform: translateY(-10px);
@@ -104,7 +112,20 @@ body, html {
     }
   }
   
-  .bubble:before, .bubble2:before{
+  /* Fade-in animation */
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(30px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  .bubble:before,
+  .bubble2:before {
     content: '';
     position: absolute;
     width: 0;
@@ -113,17 +134,20 @@ body, html {
     border: 10px solid transparent;
   }
   
-  .bubble:nth-child(odd):before, .bubble2:nth-child(odd):before {
+  .bubble:nth-child(odd):before,
+  .bubble2:nth-child(odd):before {
     left: -20px;
     border-right-color: #66bb6a;
   }
   
-  .bubble:nth-child(even):before, .bubble2:nth-child(even):before {
+  .bubble:nth-child(even):before,
+  .bubble2:nth-child(even):before {
     right: -20px;
     border-left-color: #66bb6a;
   }
   
-  .bubble span, .bubble2 span {
+  .bubble span,
+  .bubble2 span {
     display: block;
     font-weight: bold;
     color: #fff;
@@ -168,18 +192,13 @@ body, html {
     overflow: hidden;
   }
   
- 
-  
   .btn:hover:before {
     top: -30%;
     left: -30%;
     opacity: 1;
   }
   
- 
-  
   .btn:active {
-    
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2), inset 0 -2px 5px rgba(0, 0, 0, 0.1);
   }
   
